--- a/web_app/templates/home_page.html
+++ b/web_app/templates/home_page.html
@@ -81,6 +81,7 @@
     <div class="links-container">
         <a href="about_autor" class="nav-link">Об авторе</a>
         <a href="home_goods_store" class="nav-link">О магазине</a>
+        <a href="spec" class="nav-link">Специальности</a>
     </div>
     
 </body>
