--- a/web_app/templates/home_page.html
+++ b/web_app/templates/home_page.html
@@ -82,6 +82,7 @@
         <a href="about_autor" class="nav-link">Об авторе</a>
         <a href="home_goods_store" class="nav-link">О магазине</a>
         <a href="spec" class="nav-link">Специальности</a>
+        <a href="catalog" class="nav-link">Каталог магазина</a>
     </div>
     
 </body>
